Mejorado, falta maquetar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div id="secccionUser">
         <button type="button" id="crear" onclick="crearTabla()">Crear</button>
-        <button type="button" id="borrar" onclick="borrarTabla(tabla)">Borrar</button>
+        <!--<button type="button" id="borrar" onclick="borrarTabla(tabla)">Borrar</button>-->
         <input type="range" value="4" min="2" max="16" step="2"  id="barra" oninput="dinamismo()"></input>
         <p>Gradua el tamaño <br> del pincel!</p>
     </div>
