Funciona y explicacion incoporada a maqueta

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         <div id="botones">   
             <!--<button type="button" id="borrar" onclick="borrarTabla(tabla)">Borrar</button>-->
             <input type="range" value="4" min="2" max="16" step="2"  id="barra" oninput="dinamismo()"></input>
+            <div id="numCeldas"><p id="p1"></p></div>
             <button type="button" id="crear" onclick="crearTabla()">Crear</button>
         </div>
         
         <div id="instrucciones">
-            <p>Primero gradua <br> el tamaño del pincel...</p>
+            <p>Primero gradua el<br>  tamaño de la celda...</p>
+            <p>...al tamaño que prefieras...</p>
             <p> ...y después pulsa aquí para <br> crear el canvas</p>
             
         </div>
